--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
     
+    
+    <link type="text/css" media="screen" rel="stylesheet" href="css/responsive-tables.css" />
+
     <link href="css/style.css" rel="stylesheet">
     <!-- <link href="css/freecar.css" rel="stylesheet"> -->
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -29,84 +32,84 @@
 
       <!-- Templates -->
       <script type="text/template" id="add-route-template">
-      <a href="#/new" class="btn btn-primary">Add route</a>
-      <div style="float:right"><a href="#" class="logout">Logout</a></div>
+      <a href="#/new" class="btn btn-primary">Ավելացնել երթուղի</a>
+      <div style="float:right"><a href="#" class="logout">Դուրս գալ</a></div>
       <hr />
       </script>
 
       <script type="text/template" id="route-list-template">
-      <a href="#/new" class="btn btn-primary">Add route</a>
-      <div style="float:right"><a href="#" class="logout">Logout</a></div>
+      <a href="#/new" class="btn btn-primary">Ավելացնել երթուղի</a>
+      <div style="float:right"><a href="#" class="logout">Դուրս գալ</a></div>
       <hr />
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th>Name</th>
-            <th>From</th>
-            <th>To</th>
-            <th>Time</th>
-            <th>Phone</th>
-            <th>Comment</th>
+            <th colspan="2">Երթուղի</th>
+            <th>Վարորդ</th>
+            <th>Ժամանակ</th>
+            <th>Հեռախոս</th>
+            <th>Այլ ինֆորմացիա</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
           <% _.each(routes, function(route) { %>
             <tr>
-              <td><%= route.get('name') %></td>
               <td><%= route.get('from') %></td>
               <td><%= route.get('to') %></td>
+              <td><%= route.get('name') %></td>
               <td><%= route.get('time') %></td>
               <td><%= route.get('phone') %></td>
               <td><%= route.get('comment') %></td>
-              <td><a href="#/edit/<%= route.id %>" class="btn">Edit</a> <a href="#/reviews/<%= route.id %>" class="btn">Reviews</a></td>
+              <td><a href="#/edit/<%= route.id %>" class="btn">Խմբագրել</a> <a href="#/reviews/<%= route.id %>" class="btn">Կարծիքներ</a></td>
             </tr>
           <% }); %>
         </tbody>
       </table>
+
       </script>     
 
       <script type="text/template" id="edit-route-template">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3><%= route ? 'Edit' : 'Create' %> route</h3>
+          <h3><%= route ? 'Խմբագրել' : 'Ստեղծել' %> երթուղի</h3>
         </div>
 
         <form class="edit-route-form form-horizontal">
           <div class="modal-body">
             <fieldset>
               <div class="control-group">
-                <label class="control-label">Name</label>
+                <label class="control-label">Վարորդ</label>
                 <div class="controls">
                   <input type="text" class="name" name="name" value="<%= route ? route.get('name'):''%>" />
                 </div>
               </div>
               <div class="control-group">
-                <label class="control-label">From</label>
+                <label class="control-label">Երթուղու սկիզբ</label>
                 <div class="controls">
                   <input type="text" class="from" name="from" value="<%= route ? route.get('from'):''%>" />
                 </div>
               </div>
               <div class="control-group">
-                <label class="control-label">To</label>
+                <label class="control-label">Վերջնակետ</label>
                 <div class="controls">
                   <input type="text" class="to" name="to" value="<%= route ? route.get('to'):''%>" />
                 </div>
               </div>
               <div class="control-group">
-                <label class="control-label">Time</label>
+                <label class="control-label">Ժամը</label>
                 <div class="controls">
                   <input type="time" class="time" name="time" value="<%= route ? route.get('time'):''%>" />
                 </div>
               </div>
               <div class="control-group">
-                <label class="control-label">Phone</label>
+                <label class="control-label">Հեռախոս</label>
                 <div class="controls">
                   <input type="tel" class="phone" name="phone" value="<%= route ? route.get('phone'):''%>" />
                 </div>
               </div>
               <div class="control-group">
-                <label class="control-label">Comment</label>
+                <label class="control-label">Այլ. ինֆո.</label>
                 <div class="controls">
                   <input type="text" class="comment" name="comment" value="<%= route ? route.get('comment'):''%>" />
                 </div>
@@ -117,10 +120,10 @@
             <% if(route) { %>
               <input type="hidden" class="id" value="<%= route.id %>" />
             <% } %>
-            <button type="submit" class="btn btn-primary" id="uploadbutton"><%= route ? 'Update' : 'Create' %></button>
-            <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+            <button type="submit" class="btn btn-primary" id="uploadbutton"><%= route ? 'Թարմացնել' : 'Ստեղծել' %></button>
+            <a href="#" class="btn" data-dismiss="modal">Փակել</a>
             <% if(route) { %>
-              <button style="float:right" type="submit" class="btn btn-danger delete">Delete</button>
+              <button style="float:right" type="submit" class="btn btn-danger delete">Հեռացնել</button>
             <% } %>  
           </div>
         </form>
@@ -128,24 +131,23 @@
       </script>
 
       <script type="text/template" id="public-view-template">
-      <legend>All Routes</legend>
-            <table class="table table-striped table-hover">
+      <legend>Բոլոր Երթուղիները</legend>
+      <table class="table table-striped table-hover responsive">
         <thead>
           <tr>
-            <th>Name</th>
-            <th>From</th>
-            <th>To</th>
-            <th>Time</th>
-            <th>Phone</th>
-            <th>Comment</th>
+            <th>Երթուղի</th>
+            <th>Վարորդ</th>
+            <th>Ժամանակ</th>
+            <th>Հեռախոս</th>
+            <th>Այլ ինֆորմացիա</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
           <% _.each(routes, function(route) { %>
             <tr>
+              <td><%= route.get('from') %> &mdash; <%= route.get('to') %></td>
               <td><%= route.get('name') %></td>
-              <td><%= route.get('from') %></td>
-              <td><%= route.get('to') %></td>
               <td><%= route.get('time') %></td>
               <td><%= route.get('phone') %></td>
               <td><%= route.get('comment') %></td>
@@ -233,9 +235,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">FreeCar</a>
+            <a class="brand" href="#">FreeCar.am <small class="hidden-phone"> &mdash; Անվճար տրանսպորտի ուղեցույց</small></a>
             <div class="nav-collapse collapse">
-              <ul class="nav">
+              <!-- <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -251,9 +253,9 @@
                     <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
-              </ul>
+              </ul> -->
               <ul class="nav pull-right">
-                <li><a href="#loginModal" role="button" data-toggle="modal">Login / Sign Up</a></li>
+                <li><a href="#loginModal" role="button" data-toggle="modal">Մուտք / Գրանցվել</a></li>
               </ul>
               <!-- <form class="navbar-form pull-right">
                 <input class="span2" type="text" placeholder="Email">
@@ -274,7 +276,7 @@
       <footer>
         <div id="credits" class="container">
           <div class="span6 centered-span">
-            <small>Powered by <a href="https://www.parse.com">Parse</a> using the <a href="https://www.parse.com/docs/js_guide">JavaScript SDK</a></small>
+            <small>Ստեղծված է</small>
           </div>
         </div>
       </footer>
@@ -305,6 +307,7 @@
       <script src="js/vendor/underscore-min.js"></script>
       <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.7.min.js"></script>
       <script type="text/javascript" src="js/vendor/load-image.min.js"></script>
+      <script type="text/javascript" src="js/vendor/responsive-tables.js"></script>
       <script type="text/javascript" src="js/freecar.js"></script>
 
 
