--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           <tr>
             <th colspan="2">Երթուղի</th>
             <th>Վարորդ</th>
-            <th>Ժամանակ</th>
+            <th>Ժամը</th>
             <th>Հեռախոս</th>
             <th>Այլ ինֆորմացիա</th>
             <th></th>
@@ -137,7 +137,7 @@
           <tr>
             <th>Երթուղի</th>
             <th>Վարորդ</th>
-            <th>Ժամանակ</th>
+            <th>Ժամը</th>
             <th>Հեռախոս</th>
             <th>Այլ ինֆորմացիա</th>
             <th></th>
@@ -160,8 +160,8 @@
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
           <ul class="nav nav-tabs">
-            <li class="active"><a href="#login-form" data-toggle="tab"><h3>Login</h3></a></li>
-            <li><a href="#signup-form" data-toggle="tab"><h3>Sign-Up</h3></a></li>
+            <li class="active"><a href="#login-form" data-toggle="tab"><h3>Մուտք</h3></a></li>
+            <li><a href="#signup-form" data-toggle="tab"><h3>Գրանցվել</h3></a></li>
           </ul>
 
         </div>
@@ -173,13 +173,13 @@
                   <button type="button" class="close" data-dismiss="alert">&times;</button>
                 </div>
                 <div class="control-group">
-                  <label class="control-label">Username</label>
+                  <label class="control-label">Մուտքանուն</label>
                   <div class="controls">
                      <input type="text" id="login-username" placeholder="" />
                   </div>
                 </div>
                 <div class="control-group">
-                  <label class="control-label">Password</label>
+                  <label class="control-label">Գաղտնաբառ</label>
                   <div class="controls">
                      <input type="password" id="login-password" placeholder="" />
                   </div>
@@ -187,7 +187,7 @@
                 <div class="control-group">
                   <label class="control-label"></label>
                   <div class="controls">
-                    <button class="btn btn-primary">Log In</button>
+                    <button class="btn btn-primary">Մուտք</button>
                   </div>
                 </div>
               </form>
@@ -198,13 +198,13 @@
                   <button type="button" class="close" data-dismiss="alert">&times;</button>
                 </div>
                 <div class="control-group">
-                  <label class="control-label">Username</label>
+                  <label class="control-label">Մուտքանուն</label>
                   <div class="controls">
                      <input type="text" id="signup-username" placeholder="" />
                   </div>
                 </div>
                 <div class="control-group">
-                  <label class="control-label">Create Password</label>
+                  <label class="control-label">Ստեղծել գաղտնաբառ</label>
                   <div class="controls">
                      <input type="password" id="signup-password" placeholder="" />
                   </div>
@@ -212,7 +212,7 @@
                 <div class="control-group">
                   <label class="control-label"></label>
                   <div class="controls">
-                    <button class="btn btn-primary">Sign Up</button>
+                    <button class="btn btn-primary">Գրացվել</button>
                   </div>
                 </div>
               </form>
