--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 
       <script type="text/template" id="public-view-template">
       <legend>Բոլոր Երթուղիները</legend>
-      <table class="table table-striped table-hover responsive">
+      <table class="table-route-list table-striped table-bordered responsive">
         <thead>
           <tr>
             <th>Երթուղի</th>
@@ -140,7 +140,6 @@
             <th>Ժամը</th>
             <th>Հեռախոս</th>
             <th>Այլ ինֆորմացիա</th>
-            <th></th>
           </tr>
         </thead>
         <tbody>
