--- a/public/index.html
+++ b/public/index.html
@@ -275,7 +275,7 @@
       <footer>
         <div id="credits" class="container">
           <div class="span6 centered-span">
-            <small>Ստեղծված է</small>
+            <small>Ստեղծվել է հայ երիտասարդության կողմից 2013թ.</small>
           </div>
         </div>
       </footer>
