--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,31 @@
         <div class="fb-comments" data-width="470" data-num-posts="10"></div>
       </script>
 
+<!-- Facebook -->
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    // init the FB JS SDK
+    Parse.FacebookUtils.init({
+      appId      : '173398656175974',                        // App ID from the app dashboard
+      channelUrl : '//freecar.herokuapp.com//channel.html', // Channel file for x-domain comms
+      status     : true,                                 // Check Facebook Login status
+      xfbml      : true                                  // Look for social plugins on the page
+    });
+
+    // Additional initialization code such as adding Event Listeners goes here
+  };
+
+  // Load the SDK asynchronously
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/all.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
       <!-- App UI -->
       <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
