--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,14 @@
       <!-- Templates -->
       <script type="text/template" id="add-route-template">
       <a href="#/new" class="btn btn-primary">Ավելացնել երթուղի</a>
-      <div style="float:right"><a href="#" class="logout">Դուրս գալ</a></div>
+      <a href="#" class="logout btn">Ելք &mdash; Բոլոր երթուղիները</a>
       <hr />
       </script>
 
       <script type="text/template" id="route-list-template">
       <a href="#/new" class="btn btn-primary">Ավելացնել երթուղի</a>
-      <div style="float:right"><a href="#" class="logout">Դուրս գալ</a></div>
+      <a href="#" class="logout btn">Ելք &mdash; Բոլոր երթուղիները</a>
+      <div style="float:right"></div>
       <hr />
       <table class="table table-striped table-hover">
         <thead>
@@ -211,7 +212,7 @@
                 <div class="control-group">
                   <label class="control-label"></label>
                   <div class="controls">
-                    <button class="btn btn-primary">Գրացվել</button>
+                    <button class="btn btn-primary">Գրանցվել</button>
                   </div>
                 </div>
               </form>
