Footer links. Closes #14, closes #15

--- a/public/index.html
+++ b/public/index.html
@@ -275,11 +275,17 @@
       </div>
 
       <footer>
-        <div id="credits" class="container">
-          <div class="span6 centered-span">
-            <small>Ստեղծվել է հայ երիտասարդության կողմից 2013թ.</small>
-          </div>
+        <div id="credits">
+            Ստեղծվել է հայ երիտասարդության կողմից 2013թ.
         </div>
+
+          <ul class="footer-links">
+              <li><a href="https://www.facebook.com/freecaram" target="_blank">Մենք Facebook-ում</a></li>
+              <li class="muted">·</li>
+              <li><a href="http://freecar.am/media/freecar.pdf" target="_blank">Լոգոյի տպելու տարբերակը</a></li>
+              <li class="muted">·</li>
+              <li><a href="https://github.com/freecar/web" target="_blank">freecar-ը opensouce է</a></li>
+          </ul>
       </footer>
       
       <div class="modal hide fade" id="editModal">
