Better modal headers

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
       <script type="text/template" id="edit-route-template">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3><%= route ? 'Խմբագրել' : 'Ստեղծել' %> երթուղի</h3>
+          <%= route ? 'Խմբագրել' : 'Ստեղծել' %> երթուղի
         </div>
 
         <form class="edit-route-form form-horizontal">
@@ -161,8 +161,8 @@
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
           <ul class="nav nav-tabs">
-            <li class="active"><a href="#login-form" data-toggle="tab"><h3>Մուտք</h3></a></li>
-            <li><a href="#signup-form" data-toggle="tab"><h3>Գրանցվել</h3></a></li>
+            <li class="active"><a href="#login-form" data-toggle="tab">Մուտք</a></li>
+            <li><a href="#signup-form" data-toggle="tab">Գրանցվել</a></li>
           </ul>
 
         </div>
