table reset. dont use responsive-tables :)

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
     
     
-    <link type="text/css" media="screen" rel="stylesheet" href="css/responsive-tables.css" />
+    <!-- <link type="text/css" media="screen" rel="stylesheet" href="css/responsive-tables.css" /> -->
 
     <link href="css/style.css" rel="stylesheet">
     <!-- <link href="css/freecar.css" rel="stylesheet"> -->
@@ -133,8 +133,10 @@
 
       <script type="text/template" id="public-view-template">
       <legend>Բոլոր Երթուղիները</legend>
-      <button class="btn back-to-routes">Մաքրել '<span></span>' ֆիլտրը</button>
-      <table class="table-route-list table-striped table-bordered table-hover responsive" id="routestable">
+      <div class="back-to-routes-container">
+        <button class="btn back-to-routes">Մաքրել '<span></span>' ֆիլտրը</button>
+      </div>
+      <table class="table-route-list table table-striped table-bordered table-hover responsive" id="routestable">
         <thead>
           <tr>
             <th>Երթուղի</th>
@@ -314,7 +316,7 @@
       <script src="js/vendor/underscore-min.js"></script>
       <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.7.min.js"></script>
       <script type="text/javascript" src="js/vendor/load-image.min.js"></script>
-      <script type="text/javascript" src="js/vendor/responsive-tables.js"></script>      
+      <!-- <script type="text/javascript" src="js/vendor/responsive-tables.js"></script>    -->  
       <script type="text/javascript" src="js/vendor/jquery.dataTables.min.js"></script>
       <script type="text/javascript" src="js/freecar.js"></script>
 
