--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
       </script>
 
       <script type="text/template" id="public-view-template">
-      <a href="#" class="fb-login" style="float:right;">Login with Facebook</a>
+      
       <legend>Բոլոր Երթուղիները</legend>
       <div class="back-to-routes-container">
         <button class="btn back-to-routes">Մաքրել '<span></span>' ֆիլտրը</button>
@@ -177,6 +177,9 @@
               <form class="login-form form-horizontal">
                 <div class="error alert alert-error" style="display:none">
                   <button type="button" class="close" data-dismiss="alert">&times;</button>
+                </div>
+                <div class="control-group fb-connect-button-wrapper">
+                 <a href="#" class="fb-login"><img src="img/login_fb.png"></a>
                 </div>
                 <div class="control-group">
                   <label class="control-label">Մուտքանուն</label>
