--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,13 @@
       <!-- Templates -->
       <script type="text/template" id="add-route-template">
       <a href="#/new" class="btn btn-primary">Ավելացնել երթուղի</a>
-      <a href="#" class="logout btn">Ելք &mdash; Բոլոր երթուղիները</a>
+      <a href="#" class="logout btn pull-right">Ելք &mdash; Բոլոր երթուղիները</a>
       <hr />
       </script>
 
       <script type="text/template" id="route-list-template">
       <a href="#/new" class="btn btn-primary">Ավելացնել երթուղի</a>
-      <a href="#" class="logout btn">Ելք &mdash; Բոլոր երթուղիները</a>
+      <a href="#" class="logout btn pull-right">Ելք &mdash; Բոլոր երթուղիները</a>
       <div style="float:right"></div>
       <hr />
       <table class="table table-striped table-hover">
