--- a/public/index.html
+++ b/public/index.html
@@ -264,7 +264,7 @@
                 </li>
               </ul> -->
               <ul class="nav pull-right">
-                <li><a href="#loginModal" role="button" data-toggle="modal">Մուտք / Գրանցվել</a></li>
+                <li><a id="login-button" href="#loginModal" role="button" data-toggle="modal">Մուտք / Գրանցվել</a></li>
               </ul>
               <!-- <form class="navbar-form pull-right">
                 <input class="span2" type="text" placeholder="Email">
