--- a/public/index.html
+++ b/public/index.html
@@ -337,7 +337,7 @@
         function fbImage(fbid) {
           var ret = ""
           if (typeof fbid !== "undefined") {
-            ret = '<a href="http://facebook.com/' + fbid + '"><img height="20%" width="20%" src="http://graph.facebook.com/' + fbid + '/picture" /></a>';
+            ret = '<a href="http://facebook.com/' + fbid + '" target="_blank" ><img height="20%" width="20%" src="http://graph.facebook.com/' + fbid + '/picture" /></a>';
           }
           return ret;
         };
