close btn for info box

--- a/public/index.html
+++ b/public/index.html
@@ -132,15 +132,18 @@
       </script>
 
       <script type="text/template" id="public-view-template">
-      <div class="text-wrapper well">
-        <h2>Ծանոթություն</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed metus id magna dictum aliquam vel id mi. Donec porttitor dapibus arcu eget hendrerit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum consectetur massa eget metus facilisis, ac placerat tortor vulputate. Integer sed elit placerat, fermentum dolor a, venenatis turpis. Etiam et sollicitudin ipsum, vel rhoncus nulla.
-        </p>
-        <p>
-          Sed tristique ante ut sagittis varius. Ut congue purus in laoreet sodales. Maecenas dictum nunc sem, quis facilisis velit aliquet at. In lacinia purus eget blandit hendrerit. Duis interdum fermentum eros, ac eleifend velit aliquam a.
-        </p>
+      <div class="alert fade in text-wrapper">
+
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h2>Ծանոթություն</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed metus id magna dictum aliquam vel id mi. Donec porttitor dapibus arcu eget hendrerit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum consectetur massa eget metus facilisis, ac placerat tortor vulputate. Integer sed elit placerat, fermentum dolor a, venenatis turpis. Etiam et sollicitudin ipsum, vel rhoncus nulla.
+            </p>
+            <p>
+              Sed tristique ante ut sagittis varius. Ut congue purus in laoreet sodales. Maecenas dictum nunc sem, quis facilisis velit aliquet at. In lacinia purus eget blandit hendrerit. Duis interdum fermentum eros, ac eleifend velit aliquam a.
+            </p>
       </div>
+      
       <legend>Բոլոր Երթուղիները</legend>
       <div class="back-to-routes-container">
         <button class="btn back-to-routes">Մաքրել '<span></span>' ֆիլտրը</button>
