Intro text. Closes #20

--- a/public/index.html
+++ b/public/index.html
@@ -134,14 +134,28 @@
       <script type="text/template" id="public-view-template">
       <div class="alert fade in text-wrapper">
 
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            <h2>Ծանոթություն</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed metus id magna dictum aliquam vel id mi. Donec porttitor dapibus arcu eget hendrerit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum consectetur massa eget metus facilisis, ac placerat tortor vulputate. Integer sed elit placerat, fermentum dolor a, venenatis turpis. Etiam et sollicitudin ipsum, vel rhoncus nulla.
-            </p>
-            <p>
-              Sed tristique ante ut sagittis varius. Ut congue purus in laoreet sodales. Maecenas dictum nunc sem, quis facilisis velit aliquet at. In lacinia purus eget blandit hendrerit. Duis interdum fermentum eros, ac eleifend velit aliquam a.
-            </p>
+        <button type="button" class="close" data-dismiss="alert">×</button>
+      <h2>Ծանոթություն</h2>
+      <p>
+          «Անվճար մեքենա» կամ աշխարհում ընդունված Carpool անվամբ նախաձեռնությունը մի մեքենայի համատեղ օգտագործումն է:
+          Այսինքն՝ եթե մեքենայովդ ինչ–որ տեղ ես գնում, հետդ անվճար տանում ես նաև նույն ուղղությամբ գնացող այլ
+          ուղևորների։
+      </p>
+
+      <p>«Անվճար մեքենա» նախաձեռնության նպատակներն են.</p>
+      <ul>
+          <li>Oգնել մարդկանց, ովքեր չեն ցանկանում վճարել ավելի քան 100 ՀՀ դրամ քաղաքային տրանսպորտի համար:</li>
+          <li>Խուսափում քաղաքային տրանսպորտի ծանրաբեռնվածությունից, որի շնորհիվ ավելի քիչ կաղտոտվի քաղաքի օդը ու
+              ավելի քիչ վառելիք կայրվի։
+          </li>
+          <li>Ուղևորների ընկերակցությունը ճանապարհն ավելի հաճելի է դարձնում։</li>
+      </ul>
+      <p>
+          Freecar.am կայքում կարողեք ծանոթանալ նախաձեռնությանը միացած քաղաքացիներին, ովքեր պատրաստ են նշված
+          երթուղիներով տեղափոխել համապատասխան քանակով մարդկանց:
+          Մեքենայի վրա կայքում առկա տարբերանշանը փակցնելու դեպքում քաղաքացիները կկարողանան հեշտությամբ տարբերակել
+          այն և օգտվել «Անվճար մեքենա»-ի ծառայություններից:
+      </p>
       </div>
       
       <legend>Բոլոր Երթուղիները</legend>
