OG meta tags. Fixes #10

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:title" content="Անվճար Մեքենա"/>
+    <meta property="og:image" content="http://freecar.am/big_logo.png"/>
+    <meta property="og:site_name" content="Անվճար Մեքենա"/>
+    <meta property="og:description" content="Freecar.am կայքում կարողեք ծանոթանալ «Freecar» / «ԱնվճարՄեքենա» նախաձեռնությանը միացած քաղաքացիներին, ովքեր պատրաստ են նշված երթուղիներով տեղափոխել համապատասխան քանակով մարդկանց"/>
 
     <!-- Le styles -->
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
