--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta property="og:image" content="http://freecar.am/big_logo.png"/>
     <meta property="og:site_name" content="Անվճար Մեքենա"/>
     <meta property="og:description" content="Freecar.am կայքում կարողեք ծանոթանալ «Freecar» / «ԱնվճարՄեքենա» նախաձեռնությանը միացած քաղաքացիներին, ովքեր պատրաստ են նշված երթուղիներով տեղափոխել համապատասխան քանակով մարդկանց"/>
+    <meta property="og:url" content="http://freecar.am"/>
 
     <!-- Le styles -->
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
