--- a/public/index.html
+++ b/public/index.html
@@ -281,7 +281,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">FreeCar.am <small class="hidden-phone"> &mdash; Անվճար տրանսպորտի ուղեցույց</small></a>
+            <a class="brand" href="#"><img src="img/logo-navbar.png" alt="Freecar.am">FreeCar.am <small class="hidden-phone"> &mdash; Անվճար տրանսպորտի ուղեցույց</small></a>
             <div class="nav-collapse collapse">
               <!-- <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
