--- a/public/index.html
+++ b/public/index.html
@@ -327,7 +327,7 @@
           <ul class="footer-links">
               <li><a href="https://www.facebook.com/freecaram" target="_blank">Մենք Facebook-ում</a></li>
               <li class="muted">·</li>
-              <li><a href="http://freecar.am/media/freecar.pdf" target="_blank">Լոգոյի տպելու տարբերակը</a></li>
+              <li><a href="http://freecar.am/freecar.pdf" target="_blank">Լոգոյի տպելու տարբերակը</a></li>
               <li class="muted">·</li>
               <li><a href="https://github.com/freecar/web" target="_blank">freecar-ը opensouce է</a></li>
           </ul>
