--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta property="og:title" content="Անվճար Մեքենա"/>
-    <meta property="og:image" content="http://freecar.am/img/big_logo.png"/>
+    <meta property="og:image" content="http://freecar.am/big_logo.png"/>
     <meta property="og:site_name" content="Անվճար Մեքենա"/>
     <meta property="og:description" content="Freecar.am կայքում կարողեք ծանոթանալ «Freecar» / «ԱնվճարՄեքենա» նախաձեռնությանը միացած քաղաքացիներին, ովքեր պատրաստ են նշված երթուղիներով տեղափոխել համապատասխան քանակով մարդկանց"/>
     <meta property="og:url" content="http://freecar.am"/>
@@ -137,7 +137,7 @@
       </script>
 
       <script type="text/template" id="public-view-template">
-      <div class="alert fade in text-wrapper">
+      <div class="alert fade in text-wrapper hidden-phone">
 
         <button type="button" class="close" data-dismiss="alert">×</button>
       <h2>Ծանոթություն</h2>
