--- a/public/index.html
+++ b/public/index.html
@@ -300,14 +300,15 @@
                   </ul>
                 </li>
               </ul> -->
-              <ul class="nav pull-right">
-                <li><a id="login-button" href="#loginModal" role="button" data-toggle="modal">Մուտք / Գրանցվել</a></li>
-              </ul>
+              <!-- <ul class="nav pull-right">
+                <li></li>
+              </ul> -->
               <!-- <form class="navbar-form pull-right">
                 <input class="span2" type="text" placeholder="Email">
                 <input class="span2" type="password" placeholder="Password">
                 <button type="submit" class="btn">Sign in</button>
               </form> -->
+              <a id="login-button" href="#loginModal" role="button" data-toggle="modal" class="btn pull-right btn-success">Մասնակցել</a>
             </div><!--/.nav-collapse -->
           </div>
         </div>
