--- a/public/index.html
+++ b/public/index.html
@@ -330,7 +330,7 @@
               <li class="muted">·</li>
               <li><a href="http://freecar.am/freecar.pdf" target="_blank">Լոգոյի տպելու տարբերակը</a></li>
               <li class="muted">·</li>
-              <li><a href="https://github.com/freecar/web" target="_blank">freecar-ը opensouce է</a></li>
+              <li><a href="https://github.com/freecar/web" target="_blank">freecar-ը opensource է</a></li>
           </ul>
       </footer>
       
