--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
       <p>
           Freecar.am կայքում կարողեք ծանոթանալ նախաձեռնությանը միացած քաղաքացիներին, ովքեր պատրաստ են նշված
           երթուղիներով տեղափոխել համապատասխան քանակով մարդկանց:
-          Մեքենայի վրա կայքում առկա տարբերանշանը փակցնելու դեպքում քաղաքացիները կկարողանան հեշտությամբ տարբերակել
+          Մեքենայի վրա <a href="http://freecar.am/freecar.pdf" target="_blank">այս</a> տարբերանշանը փակցնելու դեպքում քաղաքացիները կկարողանան հեշտությամբ տարբերակել
           այն և օգտվել «Անվճար մեքենա»-ի ծառայություններից:
       </p>
       </div>
