--- a/public/index.html
+++ b/public/index.html
@@ -317,6 +317,7 @@
       <div id="freecar" class="container">
         
           <div class="content">
+            <img src="img/ajax-loader.gif" class="content-loader" alt="load">
           </div>
       </div>
 
