--- a/public/index.html
+++ b/public/index.html
@@ -212,8 +212,8 @@
           <div class="tab-content">
             <div class="tab-pane active" id="login-form">
               <form class="login-form form-horizontal">
-                <div class="error alert alert-error" style="display:none">
-                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <div class="error alert alert-error hide">
+                  <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>Օգտատերի անունը կամ գաղտնաբառը սխալ է, կրկի՜ն փորձիր:
                 </div>
                 <div class="control-group fb-connect-button-wrapper">
                  <a href="#" class="fb-login"><img src="img/login_fb.png"></a>
