Fix the table scroll

--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
                 </td>
                 <td><%= route.get('time') %></td>
                 <td><%= route.get('phone') %></td>
-                <td><%= route.get('comment') %></td>
+                <td class="comment"><%= route.get('comment') %></td>
               </tr>
             <% }); %>
           </tbody>
