--- a/public/index.html
+++ b/public/index.html
@@ -150,17 +150,17 @@
 
       <p>«Անվճար մեքենա» նախաձեռնության նպատակներն են.</p>
       <ul>
-          <li>Oգնել մարդկանց, ովքեր չեն ցանկանում վճարել ավելի քան 100 ՀՀ դրամ քաղաքային տրանսպորտի համար:</li>
-          <li>Խուսափում քաղաքային տրանսպորտի ծանրաբեռնվածությունից, որի շնորհիվ ավելի քիչ կաղտոտվի քաղաքի օդը ու
+          <li>Oգնել մարդկանց, ովքեր չեն ցանկանում վճարել ավել քան 100 ՀՀ դրամ քաղաքային տրանսպորտի համար:</li>
+          <li>Թեթևացնել քաղաքային տրանսպորտի ծանրաբեռնվածությունը, որի շնորհիվ ավելի քիչ կաղտոտվի քաղաքի օդն ու
               ավելի քիչ վառելիք կայրվի։
           </li>
           <li>Ուղևորների ընկերակցությունը ճանապարհն ավելի հաճելի է դարձնում։</li>
       </ul>
       <p>
-          Freecar.am կայքում կարողեք ծանոթանալ նախաձեռնությանը միացած քաղաքացիներին, ովքեր պատրաստ են նշված
+          Freecar.am կայքում կարող եք ծանոթանալ նախաձեռնությանը միացած քաղաքացիներին, ովքեր պատրաստ են նշված
           երթուղիներով տեղափոխել համապատասխան քանակով մարդկանց:
           Մեքենայի վրա <a href="http://freecar.am/freecar.pdf" target="_blank">այս</a> տարբերանշանը փակցնելու դեպքում քաղաքացիները կկարողանան հեշտությամբ տարբերակել
-          այն և օգտվել «Անվճար մեքենա»-ի ծառայություններից:
+          այն և օգտվել «Անվճար մեքենա»-յի ծառայություններից:
       </p>
       </div>
       
