Added facebook like box

--- a/public/index.html
+++ b/public/index.html
@@ -316,13 +316,15 @@
       </div>
 
       <div id="freecar" class="container">
-        
           <div class="content">
             <img src="img/ajax-loader.gif" class="content-loader" alt="load">
           </div>
       </div>
 
       <footer>
+        <div class="fb-like-box" data-href="https://www.facebook.com/freecaram" data-width="940" data-height="300"
+            data-show-faces="true" data-stream="false" data-show-border="false" data-header="false"></div>
+
         <div id="credits">
             Ստեղծվել է հայ երիտասարդության կողմից 2013թ.
         </div>
