Added top facebook like button

--- a/public/index.html
+++ b/public/index.html
@@ -165,8 +165,9 @@
       </div>
       
       <legend>Բոլոր Երթուղիները</legend>
+
       <div class="back-to-routes-container">
-        <button class="btn back-to-routes">Մաքրել '<span></span>' ֆիլտրը</button>
+      <button class="btn back-to-routes">Մաքրել '<span></span>' ֆիլտրը</button>
       </div>
       <div class="route-table-wrapper">
         <table class="table-route-list table table-striped table-bordered table-hover responsive" id="routestable">
@@ -310,6 +311,10 @@
                 <button type="submit" class="btn">Sign in</button>
               </form> -->
               <a id="login-button" href="#loginModal" role="button" data-toggle="modal" class="btn pull-right btn-success">Մասնակցել</a>
+              <div id="likebutton">
+                <div class="fb-like" data-href="https://www.facebook.com/freecaram" data-send="false"
+                     data-layout="button_count" data-width="150" data-show-faces="false"></div>
+              </div>
             </div><!--/.nav-collapse -->
           </div>
         </div>
