--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
             <th>Վարորդ</th>
             <th>Ժամը</th>
             <th>Հեռախոս</th>
-            <th>Այլ ինֆորմացիա</th>
+            <th>Այլ տեղեկություններ</th>
             <th></th>
           </tr>
         </thead>
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="control-group">
-                <label class="control-label">Այլ. ինֆո.</label>
+                <label class="control-label">Այլ. տեղ.</label>
                 <div class="controls">
                   <input type="text" class="comment" name="comment" value="<%= route ? route.get('comment'):''%>" />
                 </div>
@@ -177,7 +177,7 @@
               <th>Վարորդ</th>
               <th>Ժամը</th>
               <th>Հեռախոս</th>
-              <th>Այլ ինֆորմացիա</th>
+              <th>Այլ տեղեկություններ</th>
             </tr>
           </thead>
           <tbody>
